# ChangeLog for dev-python/h5py
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/h5py/ChangeLog,v 1.36 2015/04/08 08:05:20 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> h5py-2.3.1.ebuild,
  h5py-2.4.0.ebuild:
  Drop old Python implementations

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> h5py-2.3.1.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> h5py-2.3.1.ebuild:
  amd64 stable, bug 540290

  15 Jan 2015; Justin Lecher <jlec@gentoo.org> h5py-2.3.1.ebuild,
  h5py-2.4.0.ebuild:
  Drop deprecated DISTUTILS_NO_PARALLEL_BUILD

*h5py-2.4.0 (14 Jan 2015)

  14 Jan 2015;  <xarth@gentoo.org> +h5py-2.4.0.ebuild, -h5py-2.2.1-r1.ebuild,
  -h5py-2.2.1.ebuild:
  Version bump, drop old

  11 Aug 2014; Justin Lecher <jlec@gentoo.org> h5py-2.3.1.ebuild:
  Add python3.4 support

  23 Jul 2014; Kacper Kowalik <xarthisius@gentoo.org> h5py-2.3.1.ebuild:
  Introduce subslot and strict mpi= dependency for hdf5, see #302621

  23 Jul 2014; Kacper Kowalik <xarthisius@gentoo.org> h5py-2.3.1.ebuild:
  Make sure that --mpi is passed to setup.py during each stage

  23 Jul 2014; Kacper Kowalik <xarthisius@gentoo.org> h5py-2.3.1.ebuild:
  Use mpi wrapper when compiling with parallel hdf5. Tests with USE=mpi are
  completely fine

*h5py-2.3.1 (22 Jul 2014)

  22 Jul 2014; Kacper Kowalik <xarthisius@gentoo.org> +h5py-2.3.1.ebuild:
  Version bump, fixes bug #517178 by Tolga Dalman <tdalman@project-psi.org>

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> h5py-2.2.1-r1.ebuild,
  h5py-2.2.1.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  10 Jun 2014; Ian Delaney <idella4@gentoo.org> h5py-2.2.1-r1.ebuild:
  adjust version of dep hdf5, fixes Bug #512660

*h5py-2.2.1-r1.ebuild (07 Ap=r 2014)

  07 Apr 2014; Ian Delaney <idella4@gentoo.org> +h5py-2.2.1-r1.ebuild,