@@ -1,28 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST h5py-2.3.1.tar.gz 1072766 SHA256 447e55d5893ca285d1185a938548a12f3f7d4af441f1a7740ac28bc3aecf85c1 SHA512 f0da1d2ac855c02fb828444d719a1b23a580adb049335f3e732ace67558a125ac8cd3b3a68ac6bf9d10aa3ab19e4672b814eb28cc8c66910750c62efb655d744 WHIRLPOOL cdd2be028d450d1566776b056550af001dd382082cce5cac9fdb8968071b9f3e9855e2c30bf12bbb800c1313343980f74c2ad3d853318585bdc6134c8af5b35c
 DIST h5py-2.4.0.tar.gz 172462 SHA256 faaeadf4b8ca14c054b7568842e0d12690de7d5d68af4ecce5d7b8fc104d8e60 SHA512 b341994899d27ceae81cdf920c44902e7db64cd3e613e2b4bcf19a6d0aea5f2fcc4acc946222a6e5d4b03d787b05e2dd2a2a55df99561f74d6e827a61f85b2c5 WHIRLPOOL 734e848437921f97b2169243993cd111d4f91578bce9980ec9d373113917185f47ea8b1d98732a61bbfc7c7ae8bc1481ddf53a6ee576705352b6d77e22263f27
+DIST h5py-2.5.0.tar.gz 684354 SHA256 9833df8a679e108b561670b245bcf9f3a827b10ccb3a5fa1341523852cfac2f6 SHA512 4a83f9ae1855a7fad90133b327d426201c8ccfd2e7fbe9f39b2d61a2eee2f3ebe2ea02cf80f3d4e1ad659f8e790c173df8cc99b87d0b7ce63d34aa88cfdc7939 WHIRLPOOL 7d7852d1d2481077a81dbf194e72da10d013c43ede4d2d6e319e1e2be0f70d7495b0964ea7787ddbd145ac774cdabc32c5b7e51fc7c9bfec429d673b12bcc10b
 EBUILD h5py-2.3.1.ebuild 1231 SHA256 d4c9dcdc480106ac8cf3eb4bd1021a4a2b4ec2bd936a23a674f2ffc683584b3e SHA512 f30e4b226d8ee10348dd546d4cb33b6d17a69820756485c06876354112bec6c4172c4f021ed6046657ce062659def07b53a362c60ea148aeea7f4f89a213cf32 WHIRLPOOL a2ba1d438216aefa2f20d8a632749802352a1a8f9e49464a11f1cff9fae30cd5db5c52279ad62b3dc7dc919495fb0cc0e65f7fe3950dfe94912d09f1d160e0fc
 EBUILD h5py-2.4.0.ebuild 1122 SHA256 70a4cd1b59982e4103cc420e04591cfe9368403ffe05a7e232e9414483d58815 SHA512 1b0c35aebb6fb78ad266df27a901265b3a1c549f4ec0edeb4d8c154f064681695421f1f369b69d4755afed092003c324da11b33cf2825dc0cf9a13007c7af143 WHIRLPOOL 234e4ba42be5a4dd3140c3d984bda71ce5ca21c4c7e40a22eea2b0170a2650f8cdc162b5fa6208d7cf31de611807ad37fb7459a64543337e9b67625a3830a1ae
-MISC ChangeLog 6313 SHA256 2b0359a4c7935819e77e2f77378b93c4041cb8a8ad170971cf68300abe7f00b3 SHA512 4bba77faf41ed558cdf99d83c545d3aca9beac40be415db2d5d915b1cd0bb4d788ba106ce9b226067346ef577db24ca7ae8142fbb2dfc446e29de3187d40aacb WHIRLPOOL 9826c40ca720c5be65ea8af993604cc60706d9ff2c79c7d55f9860ff34e0ac49a89d75537295368016f1a3497408fbb3c3fb7dda883e273ff949dbf965df801a
+EBUILD h5py-2.5.0.ebuild 1465 SHA256 b7a02f37501b49611db82c66b27a0772b44196fb51f79a2360b4ae961b12df11 SHA512 ab56c940965bc201e17051fe9e5240057e4d3de0b723bfbbba0b8f03bcdda77c90a7d4ed587f745d73c4bd9d65c7eb60a24a2fb655c042ccf597a196df5f6062 WHIRLPOOL 1caf15ee5ff5fd5fe27a71cdf9af1d2fc65728dbc7d01e0c8fa8a0befbb48e7d91cbdad32b9a12c1ace18353db0031b0605995955baa865e0007c94eba5c8d5c
+MISC ChangeLog 6421 SHA256 34679ba6f85ea88197da5234d7772f86d5b20e00225c660001053ae6ada34664 SHA512 93dcfe71e115d39fd95e1b00645a9a87064c0ca2493c4e464871d1cf502a09760efa0c139b660e11553abbc11995ea13ae0e6a451c9e54233895120d46ee4e21 WHIRLPOOL 747cb9ae09cec30bd091a2a610df36f90a90434e34df9ccdd0687cbe9596436d1f40b34c5c66a6b49946dea3f982f238a9447d191d25235bfe89eda46cba2e87
 MISC metadata.xml 785 SHA256 4a83a41458931d746396cdfe469becc1597bc5beb35936cc7b4b4cabb21ee430 SHA512 e2ed4fe618cfb7e33be2136096b3f78c3ba9e0851b7442fe275e58e932b02157127983598e7c4d98c3da0f86c407fb1937abe7cb00d8e194fc78f86072af51d9 WHIRLPOOL 132eab65f7bd5c06dc233e1ce14c49a5e1808e0484eaa49c03b5b7f62691ffb1502ce20ab3bad124c3a1d960e5e840d8babcb1ac1348fcdf4f5484b37ec4ae6c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVJOJyXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOjs4P/19ea5wj38hLF5G8CoXh2+ln
-WNXjPeXl2rYXCzM8VEz5br/+MU6+jPosfn0AA95Tl661Lcw93A1JrLn9TWAqlgJo
-9l+lMMtFxYE4TQ+Hd/ZWmMsHv/kwB1f2tZGFLIKlu7InpBhaUVbbzkpON+/b8Cen
-/z9qf3vlN6ozgXtqx5WUPza+N/YaFJIt2oRGcEoMnhuEqUoCkcMHzBqPExaBieFm
-8zTFsJLaOEuxTGUjTfChXR8pJ8KYqqm7upfP94BqHGXr0cI+4F0YvDpuKRSGSOci
-FymEjwO+o8mK5yJWVpOWhkLb5OgEhwOWK4x7rj0bvdXE/oFJQ8M9IfUTff57WKKA
-iHnLU0mlx6JcIaCQ5e+9HOXDFS/3aAiefnSBAzwLjHdYtT9rUPVveQObMWEhiDvf
-MJG9MUcuzhdaP+Ro1vY0irDTv1t+/0uKCktOTXQp0uhE0ZdOKfu/x4bcD/0GlXjm
-XgncacCYYULatanpgn0RVT5RHXWnyf6UOLHXiujZ6ttsjfApkk0XtdaNsK5LZdAm
-PQUX7yWn5mU+Rx7a1LM2ysx9xlxKZXVQMpo5iW5WZUUIMr2xMcWHo2ty/kKRO8yg
-Ft3QazhvlKr9izeAV/QDvRme/4kGdfZJCIIGlXxCrdDYFav19BAxljUI3MhRlwO9
-T4UsEqU3TLZqVPO8RZj2
-=Apwc
+iQJ8BAEBCgBmBQJVZW3/XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiuaYQAKLoxeNUWpDXi9sBXnpx5Odi
+5AQhhAgkL3n94M9Oq8/gILhNDXQjOSldA/Tyh6SjyedV4cmaMHqM5VqSKHQT9fPw
+zwysE+Quwo98u9285eFZF7fFG3mOxx8vxFFMKi15vYTW00wtB1cMlfFf1PKP8yeu
+s6b7nH+gccdMpeYLCv31ImZfmanD+5T/rt6vMfbNpXTIFvlLG4ys1DUdGDUuBa0W
+imQ5jqMTEM6aT5VINE9go/U9hwtrZfOPPHPafab4m09zuvZnB6vZknd5xBcWAmlC
+y6zEJyL8o3gqUXTH1SoRV2PIzosCNAmzKljGBgvpd87g05a9eefpzy0vWpdTw3G9
+I37D1McUmDRgurBdUb6w5atfE3d7ZWVi6wKXxh5quyFlaRhcMwjvF7k+xswwFfbo
+/dFpeJgk/R+ktb/De+pLqjVU7Wf6jhtrFP/un81cI9Nt5fCitSVyRO74FxYKpSwQ
+g0hBxyU46iArYDTNw+OPyXq46sakfKuKcfBRXlsYHlrZBr45PVTv6RGSMnOKEh1b
+MRL54P8g7dVE+O26ZM19PwLfkYDJkenpRcdeeaYTuIVWTGksLpujGeqAowCcaTzQ
+AaTxWf6y1cozsP0u0wM9e/+/W0PGz+fFOvL/g9r8TvgYudlEfLfivgvI2VeIC85S
+C26TyUYXC8JMpwls8M8f
+=lGFS
 -----END PGP SIGNATURE-----
