@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/h5py
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/h5py/ChangeLog,v 1.36 2015/04/08 08:05:20 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/h5py/ChangeLog,v 1.37 2015/05/27 07:10:54 jlec Exp $
+
+*h5py-2.5.0 (27 May 2015)
+
+  27 May 2015; Justin Lecher <jlec@gentoo.org> +h5py-2.5.0.ebuild:
+  Version Bump
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> h5py-2.3.1.ebuild,
   h5py-2.4.0.ebuild:
